Backport sequenced collection calls